--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                         <th >Name</th>
                         <th >Room Name</th>
                         <th >Room Price</th>
-                        <th >Total room</th>
-                        <th >Price</th>
+                        <th >Room Number</th>
+                        <th >Total Price</th>
                       </tr>
                     </thead>
                     <tbody>
