--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <table class="table">
                     <thead>
                       <tr>
-                        <th >Name</th>
+                        <th >User Name</th>
                         <th >Room Name</th>
                         <th >Room Price</th>
                         <th >Room Number</th>
