--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Total</title>
+    <title>Room rate calculation</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </head>
@@ -15,20 +15,20 @@
             <div class="col-12">
                 <form id="form">
                     <div class="mb-3">
-                      <label for="exampleInputEmail1" class="form-label">Name</label>
-                      <input type="name" id="name" name="name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                      <label for="" class="form-label">Username</label>
+                      <input type="text" id="userName" class="form-control" id="" aria-describedby="emailHelp">
                     </div>
                     <div class="mb-3">
-                        <select class="form-select" name="room" id="room" aria-label="Default select example">
+                        <select class="form-select" id="price" aria-label="Default select example">
                             <option selected disabled>Select room type</option>
-                            <option value="120" name="Sea View">Sea View</option>
-                            <option value="80" name="Second View">Second View</option>
-                            <option value="40" name="Garden View">Garden View</option>
+                            <option value="120" roomName="Sea View">Sea View</option>
+                            <option value="80" roomName="Second View">Second View</option>
+                            <option value="40" roomName="Garden View">Garden View</option>
                         </select>
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Total room</label>
-                        <input type="number" name="number" id="number" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <input type="number" id="roomNumber" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                   </form>
@@ -59,17 +59,17 @@
             let form = document.getElementById("form");
             $(form).click((e)=>{
                 e.preventDefault();
-                const name = $('#name').val();
-                const room = $('#room').val();
-                const roomName = $('#room').find('option:selected').attr("name");
-                const number = $('#number').val();
+                const userName = $('#userName').val();
+                const price = $('#price').val();
+                const roomName = $('#price').find('option:selected').attr("roomName");
+                const roomNumber = $('#roomNumber').val();
                 $('tbody').html(`
                     <tr>
-                        <td>${name}</td>
+                        <td>${userName}</td>
                         <td>${roomName}</td>
-                        <td>${room}</td>
-                        <td>${number}</td>
-                        <td>${number*room}</td>
+                        <td>$ ${price}</td>
+                        <td>${roomNumber}</td>
+                        <td>$ ${roomNumber * price}</td>
                     </tr>
                 `);
             });
